# telegram-assistant

./: .env.example  .gitignore  README.md  install.sh  proxmox-create.sh  pyproject.toml  update.sh
deploy/: telegram-assistant.service
docs/: deploy-homelab.md
src/assistant/: bot.py  config.py  messages.py  morning.py
src/assistant/commands/: __init__.py  bins.py  event_day.py
src/assistant/sources/: bins.py  stadium.py
tests/: test_bins.py  test_bot.py  test_config.py  test_messages.py  test_morning.py  test_stadium.py
tests/fixtures/: london_stadium.html
