[project]
name = "telegram-assistant"
version = "0.1.0"
description = "Personal Telegram assistant: daily summaries and commands"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "uk-bin-collection>=0.167.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
